--- a/style1.css
+++ b/style1.css
@@ -51,8 +51,8 @@ font-size:1.4em;
 
 
 .card-text , .card-title {
-
-font-size: 1.00em;
+color: black;
+font-size: 1.11em;
 text-align: center;
 }
 
@@ -64,17 +64,67 @@ margin-top: 530px;
 }
 
 section.projects {
-padding-top: 20px;
-margin-top: 200px;
+padding-top: 50px;
+margin-top: 100px;
 text-align: center;
 border: 1px solid black;
+padding: 50px;
+}
+
+
+#P-Header{
+border: 1px solid black;
+padding: 15px;
+color: black;
 
 }
 
 
-
-
-
 /*End Of Hero CSS Code *//*End Of Hero CSS Code *//*End Of Hero CSS Code *//*End Of Hero CSS Code *//*End Of Hero CSS Code */
 /*End Of Hero CSS Code *//*End Of Hero CSS Code *//*End Of Hero CSS Code *//*End Of Hero CSS Code *//*End Of Hero CSS Code */
 /*End Of Hero CSS Code *//*End Of Hero CSS Code *//*End Of Hero CSS Code *//*End Of Hero CSS Code *//*End Of Hero CSS Code */
+
+
+
+
+
+
+
+
+
+/* Beginning Of Footer Section *//* Beginning Of Footer Section *//* Beginning Of Footer Section */
+/* Beginning Of Footer Section *//* Beginning Of Footer Section *//* Beginning Of Footer Section */
+/* Beginning Of Footer Section *//* Beginning Of Footer Section *//* Beginning Of Footer Section */
+section.footer{
+
+
+  border: 1px solid black;
+  padding: 15px;
+  color: black;
+text-align: center;
+
+}
+
+.foot-Header{
+
+color:white;
+
+
+
+}
+section.footer a{
+  color: black;
+text-decoration: none;
+
+}
+
+
+section.footer li{
+
+list-style: none;
+}
+
+section.footer a:hover {
+color:white;
+
+}
