Change the contact heading
Change to white
increased font-size: 42px

--- a/styles0.css
+++ b/styles0.css
@@ -155,10 +155,10 @@ font-size: 2em;
 }
 
 #ContactHeading{
-
+/* changing the heading for contact to white  */
 color:#0DA5E9;
 text-align: center;
-
+font-size: 43px;
 }
 
 #introsection{
